# QuizNexus

./: .gitignore  README.md  api.yaml  requirements.txt
.github/workflows/: backend_jobs.yml
backend/: .env.example  celery_entry.py  celery_worker.py  celerybeat-schedule  check_quiz_data.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  cache.py  celery_app.py  celerybeat-schedule  celeryconfig.py  config.py  email.py  models.py  tasks.py  worker.py
backend/app/agent/: student_advisor.py
backend/app/api/: __init__.py
backend/app/api/SocketIO/: __init__.py
backend/app/api/resource/: __init__.py  admin.py  userpreferences.py
backend/app/api/validators/: __init__.py
backend/app/middleware/: __init__.py  auth_middleware.py
backend/instance/: quiznexus.sqlite3
frontend/: eslint.config.js  jsconfig.json  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/HomePageComponents/: ButtonComponent.vue  LoginComponent.vue
frontend/src/components/LandingPage/: IndexPageNav.vue  LandingPageComponent.vue  LoginComponent.vue  QuizzesSideNavBar.vue  RegisterComponent.vue
frontend/src/components/admin/: AdminDashboardComponent.vue  AdminExportComponent.vue  AdminUsersComponent.vue  HomeViewComponent.vue  QuizesViewComponent.vue
frontend/src/components/fragments/: AddButtonComponent.vue  AddChapterButtonComponent.vue  (+11 more)
frontend/src/router/: index.js
frontend/src/stores/: appState.js
frontend/src/views/: HomePageView.vue  LandingPage.vue  LoginPageView.vue  RegisterPageView.vue
(+15 files in other folders)
