[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery==5.5.3",
    "flask==3.1.1",
    "flask-caching==2.3.1",
    "flask-cors==6.0.1",
    "flask-jwt-extended==4.7.1",
    "flask-login==0.6.3",
    "flask-mail==0.10.0",
    "flask-migrate==4.1.0",
    "flask-restful==0.3.10",
    "flask-sqlalchemy==3.1.1",
    "py-mon>=2.1.0",
    "pyjwt==2.10.1",
    "pyyaml==6.0.2",
    "redis==6.2.0",
    "werkzeug==3.1.3",
]
