[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery==5.5.3",
    "chromadb>=1.3.3",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "flask==3.1.1",
    "flask-caching==2.3.1",
    "flask-cors==6.0.1",
    "flask-jwt-extended==4.7.1",
    "flask-login==0.6.3",
    "flask-mail==0.10.0",
    "flask-migrate==4.1.0",
    "flask-restful==0.3.10",
    "flask-sqlalchemy==3.1.1",
    "groq>=0.33.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "openeval>=0.0.3",
    "py-mon>=2.1.0",
    "pyjwt==2.10.1",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "pyyaml==6.0.2",
    "redis==6.2.0",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "werkzeug==3.1.3",
]
